altering image paths to work with gh hosting"

--- a/src/app/articles/home/home.component.html
+++ b/src/app/articles/home/home.component.html
@@ -6,8 +6,8 @@
         <div class="card">
             <div class="container">
                 <h3>{{ page.name }}</h3>
+                <p>{{ page.tags }}</p>
                 <p>{{ page.metadata.lastUpdatedTimestamp }}</p>
-                <!-- <p>{{ page.name }}</p> -->
             </div>
         </div>
     </a>
