--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <div class="web">
         <div class="standard-align">
             <div class="row center">
-                <img class="logo" src="/assets/plug.PNG">   
+                <img class="logo" src="./assets/plug.PNG">   
                 <h1 class="main-logo">
                     <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">The Plug</a>
                 </h1>
