--- a/src/app/articles/about-page/about-page.component.html
+++ b/src/app/articles/about-page/about-page.component.html
@@ -13,7 +13,7 @@
         <p>Hi all!</p>
         <p>This is my personal site for anything I feel like publishing or blabbing about. I plan to upload some of my projects, hobbies, comments, blogs, listicles, and generally anything I find of interest.</p>
     </div>
-    <img class="arizona" src="/assets/arizona-spin.gif">    
+    <img class="arizona" src="./assets/arizona-spin.gif">    
 </div>
 
 <h3>About Me</h3>
@@ -27,5 +27,5 @@
             to say.</p>
         <p><i>mdsparks17@gmail.com</i></p>
     </div>
-    <img class="pennletter" src="/assets/pennletter.gif">    
+    <img class="pennletter" src="./assets/pennletter.gif">    
 </div>
