--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -8,3 +8,4 @@
 
 <h3>So you want to be a software dev?</h3>
 <p>Cool beans, a lot of people do as well and the industry is growing!</p>
+<p class="quote">"Something something how do I become a software developer"<br> ~Michael Sparks</p>
