--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,11 @@
 <div class="footer">
     <div class="standard-align">
         <hr>
-        <div>Back to home | mdsparks17@gmail.com</div>
+        <div>
+            <span><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Back to home</a></span>
+            <span> | </span>
+            <span>mdsparks17@gmail.com</span> 
+        </div>
+
     </div>
 </div>
