--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <div class="web">
         <div class="standard-align">
             <div class="row center">
-                <img class="logo" src="./assets/plug.PNG">   
+                <img class="logo" src="./assets/plug.PNG">
                 <h1 class="main-logo">
                     <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">The Plug</a>
                 </h1>
@@ -24,7 +24,8 @@
 
     <div class="mobile">
         <div class="mobile-align">
-            <div class="logo">
+            <div class="row center">
+                <img class="logo" src="./assets/plug.PNG">
                 <h1 class="main-logo">
                     <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">The Plug</a>
                 </h1>
@@ -40,6 +41,6 @@
                 <button class="button teal">Lists</button>
                 <button class="button blue">Search</button>
             </div>
+        </div>
     </div>
-
 </div>
