--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -1,5 +1,11 @@
 @import "/src/variables";
 
+a {
+    font-family: $roboto;
+    color: $white;
+    text-decoration: none;
+}
+
 .toolbar {
     display: flex;
     justify-content: center;
@@ -22,8 +28,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    width: 750px;
 }
 
 .main-logo {
@@ -40,7 +44,9 @@
 .nav {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
+    // height: 50px;
 }
 
 .button {
