--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,9 +14,11 @@ div {
 hr {
     width: 100%;
     border: none;
-    height: 2px;
+    height: 1px;
     background-color: $white;
     border-radius: 8px;
+
+    margin-bottom: 15px;
 }
 
 h2 {
@@ -33,6 +35,13 @@ h3 {
     font-size: 20px;
     margin: 0;
     padding: 0;
+}
+
+.quote {
+    font-style: italic;
+    margin-left: 15px;
+    padding-left: 5px;
+    border-left: 1px solid;
 }
 
 .meta {
@@ -66,7 +75,11 @@ p {
 a {
     font-family: $roboto;
     color: $white;
-    text-decoration: none;
+    text-decoration: underline;
+}
+
+a:hover {
+    color: $offwhite;
 }
 
 .orange {
