--- a/src/app/articles/about-page/about-page.component.html
+++ b/src/app/articles/about-page/about-page.component.html
@@ -1,25 +1,24 @@
-<!-- article header -->
 <h2>About</h2>
-<div class="orange-text">
+<div class="meta-text">
     <span>March 6th, 2023</span>
     <span> | </span>
     <span>#meta #work</span>
 </div>
 <hr>
 
-<!-- article content -->
 <div class="row">
     <div>
         <p>Hi all!</p>
-        <p>This is my personal site for anything I feel like publishing or blabbing about. I plan to upload some of my projects, hobbies, comments, blogs, listicles, and generally anything I find of interest.</p>
+        <p>This is my personal site for anything I feel like publishing or blabbing about. I plan to upload some of my
+            projects, hobbies, comments, blogs, listicles, and generally anything I find of interest.</p>
     </div>
-    <img class="arizona" src="./assets/arizona-spin.gif">    
+    <img class="arizona" src="./assets/arizona-spin.gif">
 </div>
-
 <h3>About Me</h3>
-<P>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade (Angular 2+, Springboot, PostreSQL). I have a degree in CS from UNC Chapel-Hill and am currently working on my MBA.</P>
-<p>When I'm not working for my corporate overlords I enjoy meetups, skating, gym, piano, and whatever hobby I randomly have fallen into for the month. If you give me the chance to attend a potluck I’ll show you why sides > dessert.</p>
-    
+<P>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade (Angular 2+, Springboot,
+    PostreSQL). I have a degree in CS from UNC Chapel-Hill and am currently working on my MBA.</P>
+<p>When I'm not working for my corporate overlords I enjoy meetups, skating, gym, piano, and whatever hobby I randomly
+    have fallen into for the month. If you give me the chance to attend a potluck I’ll show you why sides > dessert.</p>
 <div class="row">
     <div>
         <h3>How to Contact</h3>
@@ -27,5 +26,5 @@
             to say.</p>
         <p><i>mdsparks17@gmail.com</i></p>
     </div>
-    <img class="pennletter" src="./assets/pennletter.gif">    
+    <img class="pennletter" src="./assets/pennletter.gif">
 </div>
