--- a/src/app/articles/home/home.component.html
+++ b/src/app/articles/home/home.component.html
@@ -6,8 +6,8 @@
         <div class="card">
             <div class="container">
                 <h3>{{ page.name }}</h3>
-                <p>{{ page.tags }}</p>
-                <p>{{ page.metadata.lastUpdatedTimestamp }}</p>
+                <p class="meta-text">{{ page.tags }}</p>
+                <p class="meta-text">{{ page.metadata.lastUpdatedTimestamp }}</p>
             </div>
         </div>
     </a>
