--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,5 +1,5 @@
 <h2>How to Become a Software Developer</h2>
-<div class="green-text">
+<div class="meta-text">
     <span>March 6th, 2023</span>
     <span> | </span>
     <span>#work #software #tutorial</span>
@@ -9,3 +9,4 @@
 <h3>So you want to be a software dev?</h3>
 <p>Cool beans, a lot of people do as well and the industry is growing!</p>
 <p class="quote">"Something something how do I become a software developer"<br> ~Michael Sparks</p>
+ 
