--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -10,14 +10,13 @@
             </div>
             <div class="nav">
                 <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <button class="button orange">
+                    <button class="button ">
                         About
                     </button>
                 </a>
-                <button class="button red">Projects</button>
-                <button class="button green">Blog</button>
-                <button class="button teal">Lists</button>
-                <button class="button blue">Search</button>
+                <button class="button ">Blog</button>
+                <button class="button ">Lists</button>
+                <!-- <button class="button ">Search</button> -->
             </div>
         </div>
     </div>
@@ -32,15 +31,13 @@
             </div>
             <div class="nav">
                 <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <button class="button orange">
+                    <button class="button ">
                         About
                     </button>
                 </a>
-                <button class="button red">Projects</button>
-                <button class="button green">Blog</button>
-                <button class="button teal">Lists</button>
-                <button class="button blue">Search</button>
+                <button class="button ">Blog</button>
+                <button class="button ">Lists</button>
+                <!-- <button class="button ">Search</button> -->
             </div>
-        </div>
     </div>
 </div>
