--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -1,7 +1,7 @@
 @import "/src/variables";
 
 a {
-    font-family: $roboto;
+    font-family: $font;
     color: $white;
     text-decoration: none;
 }
@@ -31,7 +31,7 @@ a {
 }
 
 .main-logo {
-    font-family: $roboto;
+    font-family: $font;
     font-size: 45px;
 }
 
@@ -61,8 +61,9 @@ a {
     width: 75px;
     height: 32px;
 
+    background-color: $dark-4;
     color: $white;
-    font-family: $roboto;
+    font-family: $font;
     font-size: 16px;
 
     transition-duration: 0.3s;
