--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,12 +1,13 @@
 //@import "/src/variables";
 
 //MY COLORS
-$white: #dfe7eb; 
-$offwhite: #C0D0D8;
+$white: #ffffff; 
+$offwhite: #A6BEC9;
 $dark-1: #4F5F72;
 $dark-2: #2f3947;
-$dark-3: #28303E;
-$dark-4: #262626;
+$dark-3: #202732;
+$dark-4: #181818;
+
 $yellow: #B47304;
 $orange: #A53E12;
 $red: #A21C15;
@@ -14,12 +15,15 @@ $green: #7F7F3A;
 $teal: #13705C;
 $blue: #00827A;
 
+// Old colors: these work well together aesthetically but hurt readability
 // $yellow: #FBB336;
 // $orange: #E8652B;
 // $red: #E8534A;
 // $green: #7F7F3A;
 // $teal: #13705C;
 // $blue: #00827A;
+// $dark-3: #28303E;
+// $dark-4: #262626;
 
 //MY FONTS
-$roboto: Arial, Helvetica, sans-serif;
+$font: Arial, Helvetica, sans-serif;
