--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,12 +1,12 @@
 //@import "/src/variables";
 
 //MY COLORS
-$white: #ffffff; 
-$offwhite: #A6BEC9;
-$dark-1: #4F5F72;
-$dark-2: #2f3947;
-$dark-3: #202732;
-$dark-4: #181818;
+$white: #ffffff;        // text
+$offwhite: #C0D0D8;     // hover text
+$dark-1: #4F5F72;       // active
+$dark-2: #2f3947;       // hover
+$dark-3: #202732;       // component background
+$dark-4: #181818;       // background
 
 $yellow: #B47304;
 $orange: #A53E12;
@@ -22,6 +22,7 @@ $blue: #00827A;
 // $green: #7F7F3A;
 // $teal: #13705C;
 // $blue: #00827A;
+// $offwhite: #A6BEC9;
 // $dark-3: #28303E;
 // $dark-4: #262626;
 
