--- a/src/app/articles/about-page/about-page.component.html
+++ b/src/app/articles/about-page/about-page.component.html
@@ -15,8 +15,8 @@
     <img class="arizona" src="./assets/arizona-spin.gif">
 </div>
 <h3>About Me</h3>
-<P>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade (Angular 2+, Springboot,
-    PostreSQL). I have a degree in CS from UNC Chapel-Hill and am currently working on my MBA.</P>
+<p>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade (Angular 2+, Springboot,
+    PostreSQL). I have a degree in CS from UNC Chapel-Hill and am currently working on my MBA.</p>
 <p>When I'm not working for my corporate overlords I enjoy meetups, skating, gym, piano, and whatever hobby I randomly
     have fallen into for the month. If you give me the chance to attend a potluck I’ll show you why sides > dessert.</p>
 <div class="row">
