--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,10 +4,20 @@
     display: flex;
     justify-content: center;
 
-    width: 100%;
     height: 100px;
 
     background-color: $dark-4;
+}
+
+@media only screen and (max-width: 750px) {
+    .footer {
+    }
+    
+}
+@media only screen and (min-width: 750px) {
+    .footer {
+        width: 750px;
+    }
 }
 
 .standard-align {
@@ -16,5 +26,5 @@
     justify-content: center;
     align-items: center;
 
-    width: 750px;
+    width: 100%;
 }
