--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -1,5 +1,12 @@
+@import "/src/variables";
 
 .article {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: $dark-4;
 }
+
+
+    
