--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,20 @@
 
 // STANDARD
 
-body { background-color: $dark-4; margin: 0 0 0 0; }  
+body {
+    background-color: $dark-4;
+
+    background-image: url("./assets/bg.png");
+    background-size: cover;
+    background-position: bottom;
+    background-attachment: fixed;
+
+    margin: 0 0 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 a { font-family: $font; color: $white; text-decoration: underline; }
 
