--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -6,7 +6,44 @@
 </div>
 <hr>
 
-<h3>So you want to be a software dev?</h3>
-<p>Cool beans, a lot of people do as well and the industry is growing!</p>
-<p class="quote">"Something something how do I become a software developer"<br> ~Michael Sparks</p>
- 
+<h3>So you want to become a software developer?</h3>
+<p>Makes sense, a lot of people see software dev as their ticket to a 6-figure salary. But it’s not as simple as taking
+    a class or 2 and getting a junior role at Google. The field is tough to get a grasp of. Even people in-field like
+    yours truly have a hard time seeing the forest for the trees. Let's dive into some basics. </p>
+<p class="quote">“Can I learn to code?”</p>
+<p>Anton Ego puts it best: “Not everyone can become a great artist, but a great artist can come from anywhere.” You
+    don’t have to be young, smart, or talented to get into coding. It’s more of a mindset and general interest in the
+    field.</p>
+<p>If you can’t sit down at a computer for 4 hours and not get horribly depressed, or if encountering roadblocks upsets
+    you, do us all a favor and avoid coding. Know thyself, no salary is worth your mental wellbeing. </p>
+<p class="quote">“Don’t you need a college degree to even be considered for employment?”
+</p>
+<p>Not necessarily! I’m not going to blow hot air up your butt and tell you it's not a huge boon to have a degree on
+    your resume, but recently it's becoming less important. Big companies like Meta, Google, and Amazon care more about
+    what you know. My recommendation is that if you are college-bound anyway or just starting your degree to consider
+    getting a CS major. </p>
+<p>It's important to note that what they teach you in college is NOT what businesses will expect from you. College
+    teaches you the theory behind computer logic, how we have improved the underlying tech over time, and if you’re
+    lucky some modern approaches to applying these ideas. Academia CS is aimed at making ‘idea guys’ that understand CS
+    as a field of research. For the most part, businesses will be looking to hire workers who know the tools. Of course
+    there is overlap between the two, but a lot of your time will be spent on ideas and not head-down practice. In the
+    long run having this deep theoretical knowledge will help, but it's not necessary to get a rewarding job or work on
+    meaningful projects.</p>
+<p class="quote">“What about code camps/self-taught?”</p>
+<p>Code camps are often scams. The first thing you should be asking a code camp recruiter is the % placement in jobs
+    immediately after graduating. Anything other than an enthusiastic answer is a red flag. Definitely consider this
+    option as an adult learner, but use good judgment before signing up anywhere.</p>
+<p>Self-taught coworkers of mine are incredibly good at what they do. My guess as to why is that they have lots of
+    willpower. I tacitly recommend this route because you have to be pretty big-brained to make it on your own. However,
+    if you are the type of person that can motivate themselves this is a rewarding route.</p>
+<p class="quote">“How do I get started today?”</p>
+<p>Some people recommend starting with CodeAcademy. I feel that it's a good hour-long test to see if you have the basic
+    logic and desire to be a programmer. </p>
+<p>Past that I would STRONGLY recommend looking over <a href="https://roadmap.sh/">https://roadmap.sh/</a> and researching each path and what they do.
+    Think of some projects you would like to do and dive into one of these learning paths. Bonus points if you upload
+    proof-of-concepts, demos, and investigative projects for any of the topics listed.</p>
+<p>If you would like to get into the IT side of things, I would recommend looking over
+    <a href="https://i.redd.it/lni6tgghq0z21.jpg">https://i.redd.it/lni6tgghq0z21.jpg</a> as a general certificate guide as you explore through that side of tech.
+    Certifications are always great, and as a software dev having awareness of IT can certainly set you apart. </p>
+<p>And of course, the most important thing is to stay interested. No one learns well by choking down information. Find
+    the fun and the learning will come naturally. </p>
