--- a/src/variables.scss
+++ b/src/variables.scss
@@ -11,7 +11,7 @@ $dark-4: #181818;       // background
 $yellow: #B47304;
 $orange: #A53E12;
 $red: #A21C15;
-$green: #7F7F3A;
+$green: #A8A84D;
 $teal: #13705C;
 $blue: #00827A;
 
