--- a/src/app/articles/about-page/about-page.component.html
+++ b/src/app/articles/about-page/about-page.component.html
@@ -1,6 +1,6 @@
 <h2>About</h2>
 <div class="meta-text">
-    <span>March 6th, 2023</span>
+    <span>03/7/2023</span>
     <span> | </span>
     <span>#meta #work</span>
 </div>
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div>
-        <p>Hi all!</p>
+        <h3>Hello!</h3>
         <p>This is my personal site for anything I feel like publishing or blabbing about. I plan to upload some of my
             projects, hobbies, comments, blogs, listicles, and generally anything I find of interest.</p>
     </div>
