--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,6 +1,6 @@
 <h2>How to Become a Software Developer</h2>
 <div class="meta-text">
-    <span>March 6th, 2023</span>
+    <span>March 14th, 2023</span>
     <span> | </span>
     <span>#work #software #tutorial</span>
 </div>
@@ -16,7 +16,7 @@
     field.</p>
 <p>If you can’t sit down at a computer for 4 hours and not get horribly depressed, or if encountering roadblocks upsets
     you, do us all a favor and avoid coding. Know thyself, no salary is worth your mental wellbeing. </p>
-<p class="quote">“Don’t you need a college degree to even be considered for employment?”
+<p class="quote">“Do you need a degree to get a job?”
 </p>
 <p>Not necessarily! I’m not going to blow hot air up your butt and tell you it's not a huge boon to have a degree on
     your resume, but recently it's becoming less important. Big companies like Meta, Google, and Amazon care more about
@@ -37,7 +37,7 @@
     willpower. I tacitly recommend this route because you have to be pretty big-brained to make it on your own. However,
     if you are the type of person that can motivate themselves this is a rewarding route.</p>
 <p class="quote">“How do I get started today?”</p>
-<p>Some people recommend starting with CodeAcademy. I feel that it's a good hour-long test to see if you have the basic
+<p>Some people recommend starting with <a href="https://www.codecademy.com/">CodeAcademy</a>. I feel that it's a good hour-long test to see if you have the basic
     logic and desire to be a programmer. </p>
 <p>Past that I would STRONGLY recommend looking over <a href="https://roadmap.sh/">https://roadmap.sh/</a> and researching each path and what they do.
     Think of some projects you would like to do and dive into one of these learning paths. Bonus points if you upload
