--- a/src/app/articles/about-page/about-page.component.html
+++ b/src/app/articles/about-page/about-page.component.html
@@ -16,9 +16,10 @@
 </div>
 <h3>About Me</h3>
 <p>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade (Angular 2+, Springboot,
-    PostreSQL). I have a degree in CS from UNC Chapel-Hill and am currently working on my MBA.</p>
-<p>When I'm not working for my corporate overlords I enjoy meetups, skating, gym, piano, and whatever hobby I randomly
-    have fallen into for the month. If you give me the chance to attend a potluck I’ll show you why sides > dessert.</p>
+    PostreSQL). I have a degree in CS from UNC Chapel-Hill and am currently working on my MBA. When I'm not working for
+    my corporate overlords I enjoy meetups, skating, gym, piano, and whatever hobby I randomly
+    have fallen into for the month.</p>
+<p>Here is my <a href="https://docs.google.com/document/d/1ExJf9ano_Tjz9qf-JrbyViGa9_34G_d2Z6-eE4NroQE/edit?usp=sharing">Professional Resume</a></p>
 <div class="row">
     <div>
         <h3>How to Contact</h3>
