--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,6 +1,6 @@
 <h2>How to Become a Software Developer</h2>
 <div class="meta-text">
-    <span>March 14th, 2023</span>
+    <span>03/14/2023</span>
     <span> | </span>
     <span>#work #software #tutorial</span>
 </div>
@@ -15,7 +15,7 @@
     don’t have to be young, smart, or talented to get into coding. It’s more of a mindset and general interest in the
     field.</p>
 <p>If you can’t sit down at a computer for 4 hours and not get horribly depressed, or if encountering roadblocks upsets
-    you, do us all a favor and avoid coding. Know thyself, no salary is worth your mental wellbeing. </p>
+    you, do us all a favor and avoid coding. Know yourself, no salary is worth your mental wellbeing. </p>
 <p class="quote">“Do you need a degree to get a job?”
 </p>
 <p>Not necessarily! I’m not going to blow hot air up your butt and tell you it's not a huge boon to have a degree on
