--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,8 +1,10 @@
-<h2>How to Become a Software Developer</h2>
+<h2>{{ mypage?.name }}</h2>
 <div class="meta-text">
-    <span>03/14/2023</span>
+    <span>{{ mypage?.metadata?.lastUpdatedTimestamp }}</span>
     <span> | </span>
-    <span>#work #software #tutorial</span>
+    <span *ngFor="let tag of mypage?.tags">
+        {{ tag }}
+    </span>
 </div>
 <hr>
 
