--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -14,9 +14,14 @@
                         About
                     </button>
                 </a>
-                <button class="button ">Blog</button>
+                <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <button class="button ">
+                        Search
+                    </button>
+                </a>
+                <!-- <button class="button ">Blog</button>
                 <button class="button ">Lists</button>
-                <!-- <button class="button ">Search</button> -->
+                <button class="button ">Search</button> -->
             </div>
         </div>
     </div>
