--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,11 @@
 body {
     background-color: $dark-4;
 
-    background-image: url("./assets/bg.png");
-    background-size: cover;
-    background-position: bottom;
-    background-attachment: fixed;
+    // TODO: find a fun background image
+    // background-image: url("./assets/bg.png");
+    // background-size: cover;
+    // background-position: bottom;
+    // background-attachment: fixed;
 
     margin: 0 0 0 0;
     display: flex;
