--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -19,9 +19,6 @@
                         Search
                     </button>
                 </a>
-                <!-- <button class="button ">Blog</button>
-                <button class="button ">Lists</button>
-                <button class="button ">Search</button> -->
             </div>
         </div>
     </div>
@@ -31,7 +28,7 @@
             <div class="row center">
                 <img class="logo" src="./assets/plug.PNG">
                 <h1 class="main-logo">
-                    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">The Plug</a>
+                    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">ThePlug</a>
                 </h1>
             </div>
             <div class="nav">
@@ -40,9 +37,11 @@
                         About
                     </button>
                 </a>
-                <button class="button ">Blog</button>
-                <button class="button ">Lists</button>
-                <!-- <button class="button ">Search</button> -->
+                <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <button class="button ">
+                        Search
+                    </button>
+                </a>
             </div>
     </div>
 </div>
