--- a/src/app/articles/home/home.component.scss
+++ b/src/app/articles/home/home.component.scss
@@ -13,9 +13,10 @@ a {
 
     margin: 20px 0 20px 0;
 
-    background-color: $dark-3;
+    // background-color: $dark-3;
     height: 100px;
     width: 100%;
+    border-left: solid 2px;
     border-radius: 8px;
 
     transition-duration: 0.3s;
