--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -11,9 +11,6 @@ a {
     justify-content: center;
 
     width: 100%;
-    height: 100%;
-
-    background-color: $dark-4;
 }
 
 .standard-align {
@@ -21,7 +18,9 @@ a {
     justify-content: space-between;
     align-items: center;
 
+    padding: 0 20px 0 20px;
     width: 750px;
+    height: 80px;
 }
 
 .mobile-align {
@@ -36,9 +35,9 @@ a {
 }
 
 .logo {
-    height: 50px;
-    width: 50px;
-    margin: 15px;
+    height: 35px;
+    width: 35px;
+    margin: 0 10px 0 0;
 }
 
 .nav {
@@ -46,7 +45,6 @@ a {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    // height: 50px;
 }
 
 .button {
