--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -6,6 +6,9 @@
     justify-content: center;
     align-items: center;
     background-color: $dark-4;
+    // background-color:rgba(0, 0, 0, 0.90);
+    border-radius: 16px;
+    margin: 0 10px 0 10px;
 }
 
 
