--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -12,6 +12,9 @@
 <p>Makes sense, a lot of people see software dev as their ticket to a 6-figure salary. But it’s not as simple as taking
     a class or 2 and getting a junior role at Google. The field is tough to get a grasp of. Even people in-field like
     yours truly have a hard time seeing the forest for the trees. Let's dive into some basics. </p>
+<div class="center">
+    <img class="konata-typing" src="./assets/konata-typing.gif">
+</div>
 <p class="quote">“Can I learn to code?”</p>
 <p>Anton Ego puts it best: “Not everyone can become a great artist, but a great artist can come from anywhere.” You
     don’t have to be young, smart, or talented to get into coding. It’s more of a mindset and general interest in the
@@ -39,13 +42,17 @@
     willpower. I tacitly recommend this route because you have to be pretty big-brained to make it on your own. However,
     if you are the type of person that can motivate themselves this is a rewarding route.</p>
 <p class="quote">“How do I get started today?”</p>
-<p>Some people recommend starting with <a href="https://www.codecademy.com/">CodeAcademy</a>. I feel that it's a good hour-long test to see if you have the basic
+<p>Some people recommend starting with <a href="https://www.codecademy.com/">CodeAcademy</a>. I feel that it's a good
+    hour-long test to see if you have the basic
     logic and desire to be a programmer. </p>
-<p>Past that I would STRONGLY recommend looking over <a href="https://roadmap.sh/">https://roadmap.sh/</a> and researching each path and what they do.
+<p>Past that I would STRONGLY recommend looking over <a href="https://roadmap.sh/">https://roadmap.sh/</a> and
+    researching each path and what they do.
     Think of some projects you would like to do and dive into one of these learning paths. Bonus points if you upload
     proof-of-concepts, demos, and investigative projects for any of the topics listed.</p>
 <p>If you would like to get into the IT side of things, I would recommend looking over
-    <a href="https://i.redd.it/lni6tgghq0z21.jpg">https://i.redd.it/lni6tgghq0z21.jpg</a> as a general certificate guide as you explore through that side of tech.
-    Certifications are always great, and as a software dev having awareness of IT can certainly set you apart. </p>
+    <a href="https://i.redd.it/lni6tgghq0z21.jpg">https://i.redd.it/lni6tgghq0z21.jpg</a> as a general certificate guide
+    as you explore through that side of tech.
+    Certifications are always great, and as a software dev having awareness of IT can certainly set you apart.
+</p>
 <p>And of course, the most important thing is to stay interested. No one learns well by choking down information. Find
     the fun and the learning will come naturally. </p>
