--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -2,11 +2,11 @@
 
     <div class="web">
         <div class="standard-align">
-            <div class="row center">
-                <img class="logo" src="./assets/plug.PNG">
-                <h1 class="main-logo">
-                    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">ThePlug</a>
-                </h1>
+            <div class="row center">                
+                <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
+                    <img class="" src="./assets/Logo.png">
+                </a>
+                
             </div>
             <div class="nav">
                 <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
