--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,14 @@ h3 {
     padding: 0 0 0 0;
 }
 
+.orient-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
 .center {
     display: flex;
     justify-content: center;
