--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
-    <div class="standard-align">
-        <hr>
+    <div class="container">
         <div>
+            <hr>
             <span><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Back to home</a></span>
             <span> | </span>
             <span>mdsparks17@gmail.com</span> 
