--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,47 +1,22 @@
 <div class="toolbar">
+    <div [class]="isMobil">
+        <div class="row center">
+            <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
+                <img class="logo" src="./assets/Logo.png">
+            </a>
 
-    <div class="web">
-        <div class="standard-align">
-            <div class="row center">                
-                <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <img class="" src="./assets/Logo.png">
-                </a>
-                
-            </div>
-            <div class="nav">
-                <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <button class="button ">
-                        About
-                    </button>
-                </a>
-                <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <button class="button ">
-                        Search
-                    </button>
-                </a>
-            </div>
         </div>
-    </div>
-
-    <div class="mobile">
-        <div class="mobile-align">
-            <div class="row center">
-                <img class="logo" src="./assets/plug.PNG">
-                <h1 class="main-logo">
-                    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">ThePlug</a>
-                </h1>
-            </div>
-            <div class="nav">
-                <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <button class="button ">
-                        About
-                    </button>
-                </a>
-                <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
-                    <button class="button ">
-                        Search
-                    </button>
-                </a>
-            </div>
+        <div class="nav">
+            <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
+                <button class="button ">
+                    About
+                </button>
+            </a>
+            <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
+                <button class="button ">
+                    Search
+                </button>
+            </a>
+        </div>
     </div>
 </div>
