--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,10 +1,8 @@
 <h2>{{ mypage?.name }}</h2>
-<div class="meta-text">
+<div class="meta-text orient-left">
     <span>{{ mypage?.metadata?.lastUpdatedTimestamp }}</span>
-    <span> | </span>
-    <span *ngFor="let tag of mypage?.tags">
-        {{ tag }}
-    </span>
+    <span>&nbsp;|&nbsp;</span>
+    <app-tag-list [myTags]="mypage?.tags"></app-tag-list>
 </div>
 <hr>
 
