--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,6 +82,7 @@ h3 {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 }
@@ -102,6 +103,12 @@ h3 {
 
 .meta-text {
     color: $offwhite;
+}
+
+// FONT COLOR
+
+.teal {
+    color: teal;
 }
 
 // CUSTOMIZATION
