--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 // STANDARD
 
 body {
-    background-color: $dark-4;
+    background-color: green;
 
     // TODO: find a fun background image
     // background-image: url("./assets/bg.png");
