--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,12 +8,12 @@ $dark-2: #2f3947;       // hover
 $dark-3: #202732;       // component background
 $dark-4: #181818;       // background
 
-$yellow: #B47304;
+$yellow: #B47304;       // links
 $orange: #A53E12;
 $red: #A21C15;
-$green: #A8A84D;
+$green: #A8A84D;        // quotes
 $teal: #13705C;
-$blue: #00827A;
+$blue: #00B8AB;
 
 // Old colors: these work well together aesthetically but hurt readability
 // $yellow: #FBB336;
