--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -24,7 +24,7 @@
     flex-direction: column;
     align-items: center;
 
-    height:100%;
+    height: 80px;
     width: 100%;
 
     margin: 0 5px 0 5px;
