--- a/src/app/components/tag-list/tag-list.component.html
+++ b/src/app/components/tag-list/tag-list.component.html
@@ -1,12 +1,19 @@
 <p class="meta-text container">
     <span *ngFor="let tag of myTags">
         <a [routerLink]="['/search']" [queryParams]="{ query:tag }" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <span *ngIf="tag === '#blog'; else elseBlock">
-                <span class="tag teal">{{ tag }}&nbsp;</span>
+            <span *ngIf="tag === '#blog'; else metaCheck">
+                <span class="tag orange">{{ tag }}&nbsp;</span>
             </span>
-            <ng-template #elseBlock>
+            <ng-template #metaCheck>
+                <span *ngIf="tag === '#meta'; else standard">
+                    <span class="tag teal">{{ tag }}&nbsp;</span>
+                </span>
+            </ng-template>
+            <ng-template #standard>
                 <span class="tag">{{ tag }}&nbsp;</span>
             </ng-template>
         </a>
     </span>
 </p>
+
+
