--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -2,29 +2,26 @@
 
 .content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     
     margin: 0 0 0 0;
     padding: 0 0 0 0;
-}
-
-@media only screen and (max-width: 750px) {
-    .content {
-    }
-    
-}
-@media only screen and (min-width: 750px) {
-    .content {
-        width: 750px;
-    }
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
 
     height:100%;
     width: 100%;
 
     margin: 0 5px 0 5px;
 }
+
+// @media only screen and (max-width: 750px) {
+//     .content {
+//         width: 100%;
+//     }
+    
+// }
+// @media only screen and (min-width: 750px) {
+//     .content {
+//         width: 750px;
+//     }
+// }
