--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -8,16 +8,16 @@
     padding: 0 0 0 0;
 }
 
-@media only screen and (max-width: 750px) {
-    .footer {
-    }
+// @media only screen and (max-width: 750px) {
+//     .footer {
+//     }
     
-}
-@media only screen and (min-width: 750px) {
-    .footer {
-        width: 750px;
-    }
-}
+// }
+// @media only screen and (min-width: 750px) {
+//     .footer {
+//         width: 750px;
+//     }
+// }
 
 .container {
     display: flex;
