--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -1,5 +1,5 @@
-<div class="article">
-    <app-toolbar></app-toolbar>
+<!-- <div class="article"> -->
+    <app-header></app-header>
     <app-content></app-content>
-    <app-footer></app-footer>
-</div>
+    <app-footer class="fill"></app-footer>
+<!-- </div> -->
