--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -1,13 +1,5 @@
-@import "/src/variables";
-
-.article {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: $dark-4;
-    border-radius: 16px;
-    margin: 0 10px 0 10px;
+.fill {
+    width: 100%;
 }
 
 
